--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "gh-pages": "^6.3.0",
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5"
+  },
+  "homepage": "https://smihlenyu.github.io/my-project",
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   }
 }
